add sesion. fix code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ include = "hexlet-flask-example"}]
 python = "^3.10"
 flask = "^3.0.3"
 faker = "^25.8.0"
+gunicorn = "^22.0.0"
 
 [build-system]
 requires = ["poetry-core"]
